Fixed text-align in skills list

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -124,6 +124,7 @@ body {
                     display: grid;
                     grid-template-rows: 1fr 1fr 1fr;
                     justify-content: center;
+                    text-align: center;
                     padding: 0;
                     margin-bottom: 1.3em;
                 }
